# email-to-pdf

./: .gitignore  .tool-versions  README.md  pyproject.toml
src/email_to_pdf/: __init__.py  cli.py  converter.py
src/email_to_pdf/handlers/: imap_handler.py  pdf_handler.py
src/email_to_pdf/parsers/: email_parser.py
